--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-langchain==0.0.266
+boto3>=1.28.57
+langchain==0.0.305
 coloredlogs==15.0.1
-jq==1.4.1
-opensearch-py==2.3.0
+jq==1.6.0
+opensearch-py==2.3.1
