--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-boto3>=1.28.57
-langchain>=0.0.312
-coloredlogs==15.0.1
-jq==1.6.0
-opensearch-py==2.3.1
+boto3>=1.34.79
+langchain==0.1.14
+langchain-community==0.0.31
+coloredlogs>=15.0.1
+jq==1.7.0
+opensearch-py==2.5.0
+loguru==0.7.2
