update deprecated retrival to create_retrieval_chain

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 boto3>=1.34.79
 langchain==0.1.14
 langchain-community==0.0.31
+langchain-core==0.1.50
 coloredlogs>=15.0.1
 jq==1.7.0
 opensearch-py==2.5.0
